# thalyn

./: .commitlintrc.json  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  cliff.toml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.storybook/: main.ts  preview.tsx  test-runner.ts
brain/: README.md  pyproject.toml  thalyn-brain.spec
brain/tests/: test_action_registry.py  test_action_rpc.py  test_approval_rpc.py  test_audit.py  test_auth_rpc.py  test_browser.py  test_browser_capture.py  test_browser_cdp.py  test_browser_e2e.py  test_browser_rpc.py  test_chat.py  test_chat_send_lead.py  test_connector_actions.py  test_digest_runner.py  test_e2e_approval.py  test_e2e_drift.py  test_e2e_subagent.py  test_email.py  test_error_reporting.py  test_inline.py  test_inspect_db.py  test_inspect_run.py  test_lead_delegation.py  test_lead_lifecycle.py  test_lead_rpc.py  test_lsp.py  test_mcp.py  test_mcp_rpc.py  test_memory.py  test_memory_actions.py  test_memory_isolation.py  test_memory_persistence.py  test_memory_writes.py  test_migrations.py  test_parent_watchdog.py  test_pending_actions.py  test_project_actions.py  test_project_classifier.py  test_project_context.py  test_project_merge_apply.py  (+32 more)
brain/tests/orchestration/: test_budget.py  test_critic.py  test_cron.py  test_drift.py  test_durable_resume.py  test_escalation.py  test_graph_integration.py  test_info_flow.py  test_interrupt.py  test_kill_resume_soak.py  test_plan_edit.py  test_planner.py  test_resume.py  test_storage.py  test_subagent.py
brain/tests/provider/: _fake_sdk.py  _fixtures.py  test_anthropic.py  test_auth.py  test_auth_anthropic.py  test_auth_local.py  test_auth_openai_compat.py  test_capability_delta.py  test_contract.py  test_mlx.py  test_model_download.py  test_ollama.py  test_registry.py
brain/tests/provider/fixtures/: bash_tool.json  simple_text.json  tool_error.json
brain/tests/sandbox/: test_restricted_shell.py  test_shell_allowlist.py
brain/thalyn_brain/: __init__.py  __main__.py  action_log.py  action_registry.py  action_rpc.py  agents.py  approval_rpc.py  approvals.py  audit.py  auth_backends.py  auth_registry.py  auth_rpc.py  browser.py  browser_cdp.py  browser_rpc.py  browser_tool.py  chat.py  connector_actions.py  digest_runner.py  email_rpc.py  error_reporting.py  identity.py  inline.py  inline_rpc.py  inspect_db.py  inspect_run.py  lead_delegation.py  lead_lifecycle.py  lead_rpc.py  lsp.py  lsp_rpc.py  mcp_rpc.py  memory.py  memory_actions.py  memory_rpc.py  memory_writes.py  parent_watchdog.py  pending_actions.py  project_actions.py  project_classifier.py  (+28 more)
brain/thalyn_brain/email/: __init__.py  adapters.py  credentials.py  manager.py  store.py
brain/thalyn_brain/mcp/: __init__.py  catalog.py  descriptor.py  manager.py  registry.py
brain/thalyn_brain/migrations/: 001_v1_baseline.sql  002_backfill_late_v1_columns.py  003_v2_tables.sql  004_v1_to_v2_seed.py  005_thread_durability.sql  006_thread_fts_triggers.sql  007_memory_personal_scope.sql  __init__.py
brain/thalyn_brain/orchestration/: __init__.py  budget.py  critic.py  cron.py  drift.py  escalation.py  graph.py  info_flow.py  planner.py  resume.py  runner.py  state.py  storage.py  subagent.py
brain/thalyn_brain/provider/: __init__.py  anthropic.py  auth.py  auth_anthropic.py  auth_local.py  auth_openai_compat.py  base.py  mlx.py  model_download.py  ollama.py  registry.py
brain/thalyn_brain/sandbox/: __init__.py  restricted_shell.py  shell_allowlist.py
docs/: browser-pane.md  feedback-template.md  going-public-checklist.md  local-models.md  sandbox-shell-allowlist.md  sandbox-tiers.md  user-guide.md  voice-input.md  what-to-test.md  workflow.md
docs/adr/: 0001-desktop-runtime-tauri-2.md  0002-frontend-stack-react-shadcn.md  0003-code-editor-monaco.md  0004-brain-process-model-python-sidecar.md  0005-rust-python-ipc-ndjson-jsonrpc.md  0006-python-sidecar-packaging-pyoxidizer.md  0007-orchestration-langgraph-claude-sdk.md  0008-durable-execution-sqlitesaver.md  0009-memory-mem0-langgraph-checkpoints.md  0010-browser-sidecar-chromium-cdp.md  0011-sandbox-tiers-devcontainer-microvm.md  0012-provider-abstraction.md  0013-design-system-oklch-geist.md  0014-documentation-madr-mermaid.md  0015-commit-hygiene-conventional-commits.md  0016-license-mit.md  0017-observability-otel-langfuse.md  0018-python-sidecar-packaging-pyinstaller.md  0019-browser-engine-v2.md  0020-brain-auth-backend-split.md  0021-agent-hierarchy.md  0022-eternal-thread-durability.md  0023-worker-model-routing.md  0024-project-mobility-and-pluggable-classifier.md  0025-voice-input-stt.md  0026-chat-first-shell-and-drawer-system.md  0027-info-flow-drift-critic.md  0028-brain-owns-sqlite-storage.md  0029-in-process-cef-tao-integration.md  0030-license-apache-2.md  README.md  (+1 more)
observability/: README.md  docker-compose.yml
scripts/: before-bundle.sh  build-brain-sidecar.sh  build-icon-assets.py  fetch-whisper-base-en.sh  scan-identity-strings.sh  scan-leakage.sh  scan-retired-models.sh  stage-cef-helpers.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  cef-version.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: brain.rs  data_dir.rs  lib.rs  main.rs  power.rs  terminal.rs
src-tauri/src/browser/: discover.rs  mod.rs  supervisor.rs
src-tauri/src/cef/: host.rs  mod.rs  port_file.rs  profile.rs  sdk.rs
src-tauri/src/cef/child/: app.rs  client.rs  mac.rs  mod.rs
src-tauri/src/cef/embed/: app.rs  host_view.rs  mod.rs  runtime.rs  tao_app.rs
src-tauri/src/provider/: auth.rs  capability.rs  mod.rs  registry.rs
src-tauri/src/sandbox/: manager.rs  mod.rs  tier0.rs  tier1.rs  tier2.rs  tier3.rs
src-tauri/src/secrets/: mod.rs  store.rs
src-tauri/src/voice/: capture.rs  engine.rs  local.rs  manager.rs  mod.rs  models.rs
(+186 files in other folders)
