[project]
name = "thalyn-brain"
version = "0.0.0"
description = "Thalyn agent brain sidecar."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [{ name = "Thalyn contributors" }]
dependencies = [
    "claude-agent-sdk>=0.1.68,<0.2",
    "croniter>=3,<7",
    "httpx>=0.27,<1",
    "langgraph>=1.0,<2",
    "langgraph-checkpoint-sqlite>=3,<4",
    "opentelemetry-api>=1.30,<2",
    "opentelemetry-sdk>=1.30,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.30,<2",
    "sentry-sdk>=2.18,<3",
    "websockets>=14,<16",
    "yoyo-migrations>=8,<10",
]

[project.scripts]
thalyn-brain = "thalyn_brain.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thalyn_brain"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-socket>=0.7",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["thalyn_brain", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "ASYNC",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "ASYNC240"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
no_implicit_reexport = true
files = ["thalyn_brain", "tests"]

[[tool.mypy.overrides]]
module = "yoyo.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
