[package]
name = "thalyn"
version = "0.0.0"
description = "Thalyn desktop runtime"
edition = "2021"
rust-version = "1.78"

[lib]
name = "thalyn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Bundled CEF child binary parented to the Tauri main window per
# ADR-0019's v0.29 refinement. Gated on `cef` because the binary
# consumes the CEF SDK directly; default builds skip it cleanly.
# The parent-side `CefHost` spawns this binary, reads its
# `DevToolsActivePort`, and surfaces the WebSocket URL to the brain.
[[bin]]
name = "thalyn-cef-host"
path = "src/bin/thalyn-cef-host.rs"
required-features = ["cef"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
# Pulls in `cef` and links against a downloaded CEF binary distribution.
# Off by default during the engine-swap implementation phase so trunk
# builds don't depend on a CEF SDK or the cmake/ninja toolchain. The
# pinned CEF version lives in `cef-version.txt`. Local opt-in:
# `cargo build --features cef` after sourcing the env vars from the
# README under "CEF feature" — CI's `cef` job runs this end-to-end.
cef = [
    "dep:cef",
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-app-kit",
    "dep:windows-sys",
]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "io-util", "sync", "rt-multi-thread", "time", "net"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
cef = { version = "147.1.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2-app-kit = { version = "0.3", optional = true, features = [
    "NSApplication",
    "NSEvent",
    "NSResponder",
    "NSUserInterfaceValidation",
    "NSView",
    "NSWindow",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", optional = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
