[package]
name = "thalyn"
version = "0.0.0"
description = "Thalyn desktop runtime"
edition = "2021"
rust-version = "1.78"
# `cargo`'s auto-bin discovery picks up `src/main.rs` as the
# `thalyn` binary, but adding `[[bin]]` entries for the macOS CEF
# helpers below means cargo (and `tauri build`) can no longer
# infer which binary is the app's main entry point. Pin it
# explicitly so `pnpm tauri build` resolves the parent-app bundle
# without an ambiguous-binary error.
default-run = "thalyn"

[lib]
name = "thalyn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# macOS CEF helper-subprocess entry point per ADR-0029. Each
# `<App>.app/Contents/Frameworks/Thalyn Helper*.app` bundle's
# executable is a copy of this binary. CEF re-execs the helper
# bundles for renderer / GPU / utility / plugin / alerts
# subprocesses; this binary loads the framework and routes to
# `cef::execute_process`. Sized to be tiny so the five helper
# bundles don't bloat the produced `.app`.
[[bin]]
name = "thalyn-cef-helper"
path = "src/bin/thalyn-cef-helper.rs"
required-features = ["cef"]

# Stages the macOS CEF helper-bundle layout under
# `target/cef-helpers/` for `tauri build` to copy into the
# produced `.app` via `bundle.macOS.frameworks` and
# `bundle.macOS.files`. Invoked from `scripts/stage-cef-helpers.sh`,
# which is the `beforeBundleCommand` hook in `tauri.conf.json`.
[[bin]]
name = "bundle-cef-helpers"
path = "src/bin/bundle-cef-helpers.rs"
required-features = ["cef"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["cef"]
# Pulls in `cef` and links against a downloaded CEF binary distribution.
# Default-on as of v0.30: the in-process engine ships in trunk and the
# default `cargo` invocation pulls in cef-rs. Toolchain prerequisites
# (cmake, ninja, the CEF SDK at `$CEF_PATH`) are documented in
# `CONTRIBUTING.md`. The pinned CEF version lives in `cef-version.txt`.
# Pass `--no-default-features` for a lean, CEF-free build (the
# user-facing browser surface will not be available).
cef = [
    "dep:cef",
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-app-kit",
    "dep:windows-sys",
]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "io-util", "sync", "rt-multi-thread", "time", "net"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
cef = { version = "147.1.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2-app-kit = { version = "0.3", optional = true, features = [
    "NSApplication",
    "NSEvent",
    "NSResponder",
    "NSUserInterfaceValidation",
    "NSView",
    "NSWindow",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", optional = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
