[package]
name = "thalyn"
version = "0.0.0"
description = "Thalyn desktop runtime"
edition = "2021"
rust-version = "1.78"
# `cargo`'s auto-bin discovery picks up `src/main.rs` as the
# `thalyn` binary, but adding `[[bin]]` entries for the macOS CEF
# helpers below means cargo (and `tauri build`) can no longer
# infer which binary is the app's main entry point. Pin it
# explicitly so `pnpm tauri build` resolves the parent-app bundle
# without an ambiguous-binary error.
default-run = "thalyn"

[lib]
name = "thalyn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# macOS CEF helper-subprocess entry point per ADR-0029. Each
# `<App>.app/Contents/Frameworks/Thalyn Helper*.app` bundle's
# executable is a copy of this binary. CEF re-execs the helper
# bundles for renderer / GPU / utility / plugin / alerts
# subprocesses; this binary loads the framework and routes to
# `cef::execute_process`. Sized to be tiny so the five helper
# bundles don't bloat the produced `.app`.
[[bin]]
name = "thalyn-cef-helper"
path = "src/bin/thalyn-cef-helper.rs"
required-features = ["cef"]

# Stages the macOS CEF helper-bundle layout under
# `target/cef-helpers/` for `tauri build` to copy into the
# produced `.app` via `bundle.macOS.frameworks` and
# `bundle.macOS.files`. Invoked from `scripts/stage-cef-helpers.sh`,
# which is the `beforeBundleCommand` hook in `tauri.conf.json`.
[[bin]]
name = "bundle-cef-helpers"
path = "src/bin/bundle-cef-helpers.rs"
required-features = ["cef"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["cef", "voice-whisper"]
# Pulls in `cef` and links against a downloaded CEF binary distribution.
# Default-on as of v0.30: the in-process engine ships in trunk and the
# default `cargo` invocation pulls in cef-rs. Toolchain prerequisites
# (cmake, ninja, the CEF SDK at `$CEF_PATH`) are documented in
# `CONTRIBUTING.md`. The pinned CEF version lives in `cef-version.txt`.
# Pass `--no-default-features` for a lean, CEF-free build (the
# user-facing browser surface will not be available).
cef = [
    "dep:cef",
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-app-kit",
    "dep:windows-sys",
]
# Pulls in `whisper-cpp-plus` and builds whisper.cpp from source via
# its sys crate (cmake/ninja already required for `cef`). Default-on
# from v0.33; pass `--no-default-features` for a lean, voice-free
# build. Steady-state perf comes from the platform-specific accel
# features below — they sit off the default so CI's lean-build path
# stays portable, and macOS / Linux production builds opt in.
voice-whisper = ["dep:whisper-cpp-plus"]
# Apple Silicon Metal acceleration. Pass on macOS production builds.
voice-whisper-metal = ["voice-whisper", "whisper-cpp-plus/metal"]
# CPU acceleration via OpenBLAS. Pass on Linux / Windows production
# builds where libopenblas is available system-wide.
voice-whisper-openblas = ["voice-whisper", "whisper-cpp-plus/openblas"]
# NVIDIA CUDA acceleration. Out of scope for v1's local-default
# voice path (the user base for "Linux desktop with NVIDIA + no
# Apple device" mostly overlaps with users who would prefer cloud
# STT for latency); wired up as a feature for completeness.
voice-whisper-cuda = ["voice-whisper", "whisper-cpp-plus/cuda"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "io-util", "sync", "rt-multi-thread", "time", "net"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
cef = { version = "147.1.0", optional = true }
# Whisper.cpp Rust binding (ADR-0025). Default features pull in
# `quantization`; platform-specific accel (`metal`, `openblas`,
# `cuda`) sits behind the `voice-whisper-*` feature flags above so
# the lean-build path stays portable.
whisper-cpp-plus = { version = "0.1", optional = true }
# Cross-platform audio I/O. Drives the composer mic via the default
# input device on every platform; the resampling-to-16kHz-mono path
# lives in `voice/capture.rs`. Apache-2.0; ADR-0016 (MIT for our own
# code) allows linking against Apache-2.0 deps the same way the rest
# of the ecosystem does (tokio, serde, etc.).
cpal = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2-app-kit = { version = "0.3", optional = true, features = [
    "NSApplication",
    "NSEvent",
    "NSResponder",
    "NSUserInterfaceValidation",
    "NSView",
    "NSWindow",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", optional = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
